--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "npx nodemon"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "helmet": "^6.0.1",
     "mongoose": "^6.9.0",
     "redis": "^4.6.4",
     "xlsx": "^0.18.5"
